--- a/Project/faculty.html
+++ b/Project/faculty.html
@@ -132,6 +132,13 @@
   <div class="footer">
     <p>PRMSU College of Engineering © 2024</p>
 </div>
+<style>
 
+    .section-title {
+        background-color: #ff6600;
+        padding: 10px;
+        font-size: 1.2em;
+        margin-bottom: 20px;
+    }</style>
     <script src="Java-Script.js"></script>
 </html>
