--- a/Project/Extension.html
+++ b/Project/Extension.html
@@ -88,11 +88,23 @@
     display: flex;
     flex-direction: column;
     gap: 0; 
-}
+}.news-item{
+
+background-color: #ffffff;
+} 
+.content{
+
+background-color: #ffffff;
+} 
 .section {
     margin: 0; 
     padding: 0;
-}
+}    .section-title {
+        background-color: #ff6600;
+        padding: 10px;
+        font-size: 1.2em;
+        margin-bottom: 20px;
+    }
  </style>   
     <!-- Footer -->
     <div class="footer">
