--- a/Project/History.html
+++ b/Project/History.html
@@ -101,6 +101,7 @@
         display: flex;
         flex-direction: column;
         min-height: 100vh;
+        background-color: #fff3e0;
     }
 
     .container {
