--- a/Project/Extension.html
+++ b/Project/Extension.html
@@ -16,7 +16,7 @@
     </div>
 
     <div class="navbar-right">
-        <a href="HOME.html" id="home-link">Home</a>
+        <a href="index.html" id="home-link">Home</a>
         <div class="dropdown">
             <button class="dropbtn"><a href="Instruction.html">Instruction</a></button>
             <div class="dropdown-content">
@@ -38,73 +38,45 @@
         <input type="text" placeholder="Search..." class="search-bar">
     </div>
 </div>
-</head>
-<body>
- <div class="container">
-  <div class="header">
-   Extension
-  </div>
-</div>
-<div class="content">
+
+  <div class="container"><div class="header">Extension</div></div>
+  
+  <div class="content">
     <img alt="College of Engineering Research and Extension Framework" height="600" src="Photos/EXtension-R-and-E-Framework-v2.png" width="800"/>
     <div class="container">
-        <div class="section">
-            The College of Engineering Research and Extension Framework...
-        </div>
-        <div class="section" style="font-style: italic; margin-top: 20px;">
-            Contents to be updated soon...
-        </div>
+      <div class="section">The College of Engineering Research and Extension Framework...</div>
+      <div class="section" style="font-style: italic; margin-top: 20px;">Contents to be updated soon...</div>
     </div>
-</div>
+  </div>
 
-
-
-<div class="container">
+  <div class="container">
     <div class="section-title">Accomplishments</div>
-
     <div class="news">
-        <div class="news-item">
-            <img alt="BSME Department awards and demonstrates the Fish Crushing Machine to Laoag Kaunlaran Association" height="500" src="Photos/BSME.png" width="500"/>
-            <div>
-                BSME Department awards and demonstrates the Fish Crushing Machine to Laoag Kaunlaran Association
-            </div>
-        </div>
+      <div class="news-item">
+        <img alt="BSME Department awards and demonstrates the Fish Crushing Machine to Laoag Kaunlaran Association" height="500" src="Photos/BSME.png" width="500"/>
+        <div>BSME Department awards and demonstrates the Fish Crushing Machine to Laoag Kaunlaran Association</div>
+      </div>
     </div>
-</div>
+  </div>
 
-<div class="container">
+  <div class="container">
     <div class="section-title">Reports</div>
     <div class="section-list">
-        <div class="section">• Accomplishment Report 2021</div>
-        <div class="section">• Accomplishment Report 2022</div>
-        <div class="section">• Programs, Projects and Activities</div>
-        <p><div class="section1"style="font-style: italic; margin-top: 20px;">Contents and links to be updated soon...</div></p>
+      <div class="section">• Accomplishment Report 2021</div>
+      <div class="section">• Accomplishment Report 2022</div>
+      <div class="section">• Programs, Projects and Activities</div>
+      <div class="section1" style="font-style: italic; margin-top: 20px;">Contents and links to be updated soon...</div>
     </div>
-</div>
-
+  </div>
+</body>
 
  <style>
-    .section-list {
-    display: flex;
-    flex-direction: column;
-    gap: 0; 
-}.news-item{
+.section-list {display: flex; flex-direction: column; gap: 0;}
+.news-item {background-color: #ffffff;}
+.content {background-color: #ffffff;}
+.section {margin: 0; padding: 0;}
+.section-title {background-color: #ff6600; padding: 10px; font-size: 1.2em; margin-bottom: 20px;}
 
-background-color: #ffffff;
-} 
-.content{
-
-background-color: #ffffff;
-} 
-.section {
-    margin: 0; 
-    padding: 0;
-}    .section-title {
-        background-color: #ff6600;
-        padding: 10px;
-        font-size: 1.2em;
-        margin-bottom: 20px;
-    }
  </style>   
     <!-- Footer -->
     <div class="footer">
