--- a/Project/History.html
+++ b/Project/History.html
@@ -16,7 +16,7 @@
     </div>
 
     <div class="navbar-right">
-        <a href="HOME.html" id="home-link">Home</a>
+        <a href="index.html" id="home-link">Home</a>
         <div class="dropdown">
             <button class="dropbtn"><a href="Instruction.html">Instruction</a></button>
             <div class="dropdown-content">
@@ -93,66 +93,16 @@
 </div>
 
 <style>
-     body {
-        font-family: Arial, sans-serif;
-        text-align: center;
-        margin: 0;
-        padding: 0;
-        display: flex;
-        flex-direction: column;
-        min-height: 100vh;
-        background-color: #fff3e0;
-    }
+body {font-family: Arial, sans-serif; text-align: center; margin: 0; padding: 0; display: flex; flex-direction: column; min-height: 100vh; background-color: #fff3e0;}
+.container {flex: 1;}
+.image-container {margin: 20px auto; width: 80%;}
+.image-containerr {width: 800px; height: 500px; display: flex; justify-content: center; align-items: center; overflow: hidden; margin: 0 auto;}
+.image-containerr img, .image-container img {max-width: 100%; height: auto;}
+.section p {text-indent: 30px; text-align: justify; margin-bottom: 5px;}
+.caption {font-size: 14px; color: #666; margin-top: 10px;}
+.header h1 {margin: 0; font-size: 24px; color: #333333;}
+.section h2 {color: #ff6600; font-size: 20px; margin: 0 0 10px 0;}
 
-    .container {
-        flex: 1;
-    }
-    .image-container {
-    margin: 20px auto;
-    width: 80%;
-}
-.image-containerr {
-    width: 800px;
-    height: 500px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-    margin: 0 auto;
-}
-
-.image-containerr img {
-    max-width: 100%;
-    height: auto;
-}
-
-.image-container img {
-    width: 100%;
-    height: auto;
-}
-
-.section p {
-    text-indent: 30px;
-    text-align: justify;
-    margin-bottom: 5px;
-}
-
-
-.caption {
-        font-size: 14px;
-        color: #666;
-        margin-top: 10px;
-    }
-    .header h1 {
-            margin: 0;
-            font-size: 24px;
-            color: #333333;
-        }
-    .section h2 {
-            color: #ff6600;
-            font-size: 20px;
-            margin: 0 0 10px 0;
-        }
-   </style>
+</style>
  
 <script src="Java-Script
