--- a/Project/Instruction.html
+++ b/Project/Instruction.html
@@ -16,7 +16,7 @@
         </div>
     
         <div class="navbar-right">
-            <a href="HOME.html" id="home-link">Home</a>
+            <a href="index.html" id="home-link">Home</a>
             <div class="dropdown">
                 <button class="dropbtn"><a href="Instruction.html">Instruction</a></button>
                 <div class="dropdown-content">
@@ -41,44 +41,15 @@
 
 <html>
  <head>
+
   <style>
-.container {
-    text-align: center;
-    padding: 20px;
-    margin-bottom: 150px; 
-}
-
-.header {
-    color: #ff6600;
-    font-size: 24px;
-    font-weight: bold;
-}
-
-.image-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
-    margin: 20px auto;
-    width: 80%;
-   
-}
-
-.image-container img {
-    max-width: 100%; 
-    max-height: 1000px; 
-    height: auto;
-    margin-bottom: 170px; 
-    
-}
-
-.title {
-    font-size: 36px;
-    font-weight: bold;
-    color: #000000;
-    margin-top: 10px;
-}
+.container {text-align: center; padding: 20px; margin-bottom: 150px;}
+.header {color: #ff6600; font-size: 24px; font-weight: bold;}
+.image-container {display: flex; justify-content: center; align-items: center; padding: 20px; margin: 20px auto; width: 80%;}
+.image-container img {max-width: 100%; max-height: 1000px; height: auto; margin-bottom: 170px;}
+.title {font-size: 36px; font-weight: bold; color: #000000; margin-top: 10px;}
   </style>
+  
 </head>
 <body>
  <div class="container">
