--- a/Project/faculty.html
+++ b/Project/faculty.html
@@ -15,7 +15,7 @@
             <h1>PRMSU College of Engineering</h1>
         </div>
         <div class="navbar-right">
-            <a href="HOME.html" id="home-link">Home</a>
+            <a href="index.html" id="home-link">Home</a>
             <div class="dropdown" aria-label="Instruction">
                 <button class="dropbtn"><a href="Instruction.html">Instruction</a></button>
                 <div class="dropdown-content">
@@ -132,13 +132,10 @@
   <div class="footer">
     <p>PRMSU College of Engineering © 2024</p>
 </div>
-<style>
 
-    .section-title {
-        background-color: #ff6600;
-        padding: 10px;
-        font-size: 1.2em;
-        margin-bottom: 20px;
-    }</style>
+<style>
+.section-title {background-color: #ff6600; padding: 10px; font-size: 1.2em; margin-bottom: 20px;}
+</style>
+
     <script src="Java-Script.js"></script>
 </html>
