--- a/Project/Research.html
+++ b/Project/Research.html
@@ -16,7 +16,7 @@
     </div>
 
     <div class="navbar-right">
-        <a href="HOME.html" id="home-link">Home</a>
+        <a href="index.html" id="home-link">Home</a>
         <div class="dropdown">
             <button class="dropbtn"><a href="Instruction.html">Instruction</a></button>
             <div class="dropdown-content">
@@ -91,84 +91,20 @@
     </div>
 
 <style>
-
-
-.header img {
-  max-width: 100%;
-  height: auto;
-  display: block;
-  margin: 0 auto;
-}
-
-.section-title {
-  background-color: #ff6600;
-  color: #fff;
-  text-align: center;
-  padding: 10px;
-  font-size: 20px;
-  font-weight: bold;
-  margin-top: 20px; /* Adds space above the section title */
-}
-
-.content {
-  padding: 20px;
-  background-color: #fff;
-  display: flex;
-  justify-content: center;
-}
-
-.content img {
-  width: 100px;
-  height: 100px;
-}
-
-.content .programs,
-.content .innovations {
-  display: flex;
-  justify-content: space-around;
-  padding: 20px 0;
-  gap: 40px;
-}
-
-.content .innovations img {
-  width: 300px;
-  height: auto;
-  margin: 0 10px;
-}
-
-.links {
-  display: flex;
-  gap: 150px;
-}
-
-.links > div {
-  flex: 1;
-  text-align: left;
-  width: 45%;
-}
-
-.links ul {
-  list-style-type: none;
-  margin: 20px 0;
-  padding: 0 20px;
-}
-
-.links li {
-  list-style-type: disc;
-  margin-bottom: 10px;
-}
-
-.links a {
-  text-decoration: none;
-  color: #000;
-  display: inline;
-}
-
-.links a.underlined {
-  text-decoration: underline !important;
-}
-
+.header img {max-width: 100%; height: auto; display: block; margin: 0 auto;}
+.section-title {background-color: #ff6600; color: #fff; text-align: center; padding: 10px; font-size: 20px; font-weight: bold; margin-top: 20px;}
+.content {padding: 20px; background-color: #fff; display: flex; justify-content: center;}
+.content img {width: 100px; height: 100px;}
+.content .programs, .content .innovations {display: flex; justify-content: space-around; padding: 20px 0; gap: 40px;}
+.content .innovations img {width: 300px; height: auto; margin: 0 10px;}
+.links {display: flex; gap: 150px;}
+.links > div {flex: 1; text-align: left; width: 45%;}
+.links ul {list-style-type: none; margin: 20px 0; padding: 0 20px;}
+.links li {list-style-type: disc; margin-bottom: 10px;}
+.links a {text-decoration: none; color: #000; display: inline;}
+.links a.underlined {text-decoration: underline !important;}
     </style>
+    
     <script src="Java-Script.js"></script>
 </body>
 </html>
