--- a/Project/bsee-research.html
+++ b/Project/bsee-research.html
@@ -16,7 +16,7 @@
     </div>
 
     <div class="navbar-right">
-        <a href="HOME.html" id="home-link">Home</a>
+        <a href="index.html" id="home-link">Home</a>
         <div class="dropdown">
             <button class="dropbtn"><a href="Instruction.html">Instruction</a></button>
             <div class="dropdown-content">
@@ -67,69 +67,19 @@
     </div>
 
 <style>
-    
-.container {
-    text-align: center;
-    padding: 20px;
-    margin-bottom: 150px;
-}
-
-.header {
-    color: #ff6600;
-    font-size: 24px;
-    font-weight: bold;
-    margin: 0;
-}
-
-.section {
-    margin: 0;
-    padding: 0;
-}
-
-.section-title { 
-    background-color: #f96302; 
-    padding: 15px; 
-    text-align: center; 
-    color: white; 
-    font-size: 24px;
-    font-weight: bold;
-}
-
-.section-list .section:last-child {
-    margin-bottom: 80px; /* Adds space only below "BSME Research 2" */
-}
-
-.content {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
-    background-color: #ffffff;
-}
-
-.content img {
-    width: 200px;
-    height: 200px;
-}
-
-.content .text {
-    margin-left: 20px;
-}
-
-.content .text p {
-    margin: 5px 0;
-}
-
-.content .text p:first-child {
-    font-weight: bold;
-}
-
-.content .text p:last-child {
-    font-style: italic;
-}
-
-
+.container {text-align: center; padding: 20px; margin-bottom: 150px;}
+.header {color: #ff6600; font-size: 24px; font-weight: bold; margin: 0;}
+.section {margin: 0; padding: 0;}
+.section-title {background-color: #f96302; padding: 15px; text-align: center; color: white; font-size: 24px; font-weight: bold;}
+.section-list .section:last-child {margin-bottom: 80px;}
+.content {display: flex; justify-content: center; align-items: center; padding: 20px; background-color: #ffffff;}
+.content img {width: 200px; height: 200px;}
+.content .text {margin-left: 20px;}
+.content .text p {margin: 5px 0;}
+.content .text p:first-child {font-weight: bold;}
+.content .text p:last-child {font-style: italic;}
 </style>
+
 </div>
 <div class="footer">
     <p>PRMSU College of Engineering © 2024</p>
